fix(pk-portfolio): modified ~/components/_tabs, resolved button border-radius issue on mobile browsers and increased button size.

--- a/apps/pk-portfolio/src/scss/components/_tabs.scss
+++ b/apps/pk-portfolio/src/scss/components/_tabs.scss
@@ -46,13 +46,15 @@
 
       & > button {
         padding: 0;
-        width: 25px;
-        height: 25px;
+        width: 30px;
+        height: 30px;
         display: flex;
         justify-content: center;
         align-items: center;
         visibility: visible;
-        border-radius: none;
+        -webkit-appearance: none;
+        border-radius: 0;
+        border-width: 0;
 
         &.prev { inset-inline-start: 15px; }
         &.next { inset-inline-end: 15px; }
